Extended PathUtils for flattening property paths to BasicPatterns, added ReverseRenameUtils to handle any generated variable name.
A bit of consolidation work on spatial / geosparql utilities.